# nomad-pyteam-frontend

./: main.py  pyproject.toml
pages/: signup.py
