[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["wonjangcloud9 <venuscwj@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.39.0"
watchdog = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
